# jukebox

./: .rustfmt.toml  Cargo.toml  README.md  ROADMAP.md
.github/: CODEOWNERS  LICENSE  dependabot.yml  labels.yml
crates/fail/: Cargo.toml  LICENSE
crates/fail/src/: lib.rs
crates/jukebox/: Cargo.toml
crates/jukebox/src/: main.rs
crates/vinyl/: Cargo.toml
crates/vinyl/src/: err.rs  lib.rs
crates/vinyl/src/filter/: lib.rs
crates/vinyl/src/fmt/: lib.rs
crates/vinyl/src/player/: lib.rs
crates/vinyl/src/track/: lib.rs  playback.rs
src/: err.rs  lib.rs  main.rs
src/lib/: config.rs
src/player/track/: meta.rs  playback.rs
src/util/: config.rs
vinyl/: Cargo.toml
vinyl/src/: err.rs  lib.rs
vinyl/src/track/: meta.rs
