[package]
name = "jukebox"
version = "0.1.0"
authors = [
	"Tyler J. Russell <nytelife@protonmail.com>",
	"doge <doge@helper.wtf>",
	"Stitch07 (github.com/stitch07)",
	"Pyrotechniac <owenbellish@gmail.com>"
]
edition = "2018"
license = "MIT"

[dependencies]
actix-web = "3.3.2"
config = { version = "0.11.0", default-features = false, features = ["yaml", "toml"] }
serde = { version = "1.0.125", default-features = false, features = ["derive"] }
log = "0.4.14"
die = "0.2.0"
thiserror = "1.0.25"
