[package]
name = "jukebox-workspace"
version = "0.1.0"
authors = [
	"Tyler J. Russell <t@k-cs.co>",
	"doge <doge@helper.wtf>",
	"Stitch (github.com/soumil-07)",
	"Pyrotechniac <owenbellish@gmail.com>"
]
edition = "2018"
license = "MIT"

[lib]
path = "crates/jukebox/src/lib.rs"

[workspace]
members = ["crates/*"]
default-members = ["crates/jukebox"]
